# incubator-quickstep

./: CMakeLists.txt
catalog/: CatalogRelationStatistics.hpp
cli/: CommandExecutor.cpp  PrintToScreen.cpp  QuickstepCli.cpp
compression/: CMakeLists.txt  CompressionDictionaryLite.hpp  CompressionDictionaryReference.hpp  CompressionTruncationReference.hpp
expressions/: CMakeLists.txt  ExpressionFactories.cpp  Expressions.proto
expressions/aggregation/: AggregateFunction.cpp  AggregateFunction.proto  AggregateFunctionAvg.cpp  AggregateFunctionFactory.cpp  AggregateFunctionHasMultipleValues.cpp  AggregateFunctionHasMultipleValues.hpp  AggregateFunctionMax.cpp  AggregateFunctionMin.cpp  AggregateFunctionSum.cpp  AggregateFunctionTraits.hpp  AggregationHandleAvg.cpp  AggregationHandleAvg.hpp  AggregationHandleHasMultipleValues.cpp  AggregationHandleHasMultipleValues.hpp  AggregationHandleMax.cpp  AggregationHandleMin.cpp  AggregationHandleSum.cpp  AggregationID.hpp  CMakeLists.txt
expressions/scalar/: CMakeLists.txt  ScalarAttribute.cpp  ScalarBinaryExpression.cpp  ScalarBinaryExpression.hpp  ScalarUnaryExpression.cpp  ScalarUnaryExpression.hpp
expressions/table_generator/: GeneratorFunction.hpp
expressions/window_aggregation/: CMakeLists.txt  WindowAggregateFunctionAvg.cpp  WindowAggregateFunctionSum.cpp  WindowAggregationHandle.cpp  WindowAggregationHandleAvg.cpp
parser/: CMakeLists.txt  ParseAllDistinct.hpp  ParseAttributeDefinition.cpp  ParseAttributeDefinition.hpp  ParseBasicExpressions.cpp  ParseExpression.hpp  ParseSelect.hpp  ParseSetOperation.hpp  ParseStatement.hpp  ParseSubqueryExpression.hpp  ParserUtil.hpp  SqlLexer.lpp  SqlParser.ypp  SqlParserWrapper.cpp
parser/preprocessed/: SqlLexer_gen.cpp  SqlLexer_gen.hpp  SqlParser_gen.cpp  SqlParser_gen.hpp
query_execution/: CMakeLists.txt  ForemanDistributed.cpp  ForemanDistributed.hpp  PolicyEnforcerDistributed.hpp  QueryContext.cpp  QueryContext.hpp  QueryContext.proto  QueryManagerDistributed.hpp  Worker.cpp
query_optimizer/: CMakeLists.txt  ExecutionGenerator.cpp  ExecutionGenerator.hpp  LogicalGenerator.cpp  PhysicalGenerator.cpp
query_optimizer/cost_model/: CMakeLists.txt  SimpleCostModel.cpp  SimpleCostModel.hpp  StarSchemaSimpleCostModel.cpp  StarSchemaSimpleCostModel.hpp
query_optimizer/expressions/: BinaryExpression.cpp  Cast.cpp  (+17 more)
relational_operators/: BuildVectorOperator.cpp  BuildVectorOperator.hpp  CMakeLists.txt  DestroyVectorOperator.cpp  DestroyVectorOperator.hpp  HashJoinOperator.cpp  InitializeVectorOperator.cpp  InitializeVectorOperator.hpp  RelationalOperator.hpp  SaveBlocksOperator.cpp  SortMergeRunOperator.cpp  SortMergeRunOperatorHelpers.cpp  SortMergeRunOperatorHelpers.hpp  UnionAllOperator.cpp  UnionAllOperator.hpp  VectorJoinOperator.cpp  VectorJoinOperator.hpp  WorkOrder.proto
storage/: AggregationOperationState.cpp  BasicColumnStoreValueAccessor.hpp  CMakeLists.txt  CollisionFreeVector.hpp  CollisionFreeVectorTable.cpp  CollisionFreeVectorTable.hpp  CompactKeySeparateChainingHashTable.cpp  CompactKeySeparateChainingHashTable.hpp  CompressedBlockBuilder.cpp  CompressedColumnStoreValueAccessor.hpp  HashTable.proto  HashTableFactory.hpp  PackedPayloadHashTable.cpp  SMAIndexSubBlock.cpp  StorageConstants.hpp  ThreadPrivateCompactKeyHashTable.cpp  ThreadPrivateCompactKeyHashTable.hpp  TupleReference.hpp  ValueAccessor.hpp
types/: CMakeLists.txt  CastUtil.cpp  CastUtil.hpp  CharType.cpp  CharType.hpp  DateOperatorOverloads.hpp  DateType.cpp  DateType.hpp  DatetimeIntervalType.cpp  DatetimeIntervalType.hpp  DatetimeLit.hpp  DatetimeType.cpp  DatetimeType.hpp  DecimalLit.hpp  DecimalType.cpp  DecimalType.hpp  DoubleType.cpp  DoubleType.hpp  FloatType.cpp  FloatType.hpp  IntType.cpp  IntType.hpp  LongType.cpp  LongType.hpp  NullType.hpp  NumericSuperType.hpp  Type.cpp  Type.hpp  Type.proto  TypeFactory.cpp  TypeFactory.hpp  TypeID.hpp  TypeTraits.hpp  TypedValue.cpp  TypedValue.hpp  TypedValue.proto  VarCharType.cpp  VarCharType.hpp  YearMonthIntervalType.cpp  YearMonthIntervalType.hpp
types/operations/: CMakeLists.txt  Operation.cpp  Operation.hpp  Operation.proto  OperationFactory.cpp  OperationFactory.hpp  OperationSignature.cpp  OperationSignature.hpp  OperationSignatureCoercionPrecedence.hpp  OperationSignatureLite.cpp  OperationSignatureLite.hpp  OperationTraits.hpp  OperationUtil.cpp  OperationUtil.hpp  OperatorPrecedence.hpp
types/operations/binary_operations/: AddBinaryOperation.cpp  ArithmeticBinaryFunctorOverloads.hpp  ArithmeticBinaryOperations.hpp  ArithmeticBinaryOperators.hpp  BinaryFunctor.hpp  BinaryOperation.cpp  BinaryOperation.hpp  BinaryOperationCodeGen.hpp  BinaryOperationFactory.cpp  CMakeLists.txt  CxxMathBinaryOperations.hpp  DivideBinaryOperation.cpp  MultiplyBinaryOperation.cpp  SubtractBinaryOperation.cpp
types/operations/comparisons/: BasicComparison.cpp  BasicComparison.hpp  CMakeLists.txt  Comparison.hpp  ComparisonUtil.hpp  LiteralComparators-inl.hpp  PatternMatchingComparison.cpp
types/operations/tests/: OperationSignature_unittest.cpp
types/operations/unary_operations/: ArithmeticUnaryOperations.hpp  AsciiStringUnaryOperations.hpp  CMakeLists.txt  CastOperation.cpp  CastOperation.hpp  CxxMathUnaryOperations.hpp  NumericCastOperation.hpp  UnaryFunctor.hpp  UnaryOperation.cpp  UnaryOperation.hpp  UnaryOperationCodeGen.hpp
utility/: CMakeLists.txt  EventProfiler.cpp  EventProfiler.hpp  ExecutionDAGVisualizer.cpp  PlanVisualizer.cpp  SqlError.cpp
utility/meta/: CMakeLists.txt  Common.hpp  Dispatchers.hpp  Math.hpp  TMP.hpp  TypeList.hpp  TypeListMetaFunctions.hpp
viz/: CMakeLists.txt  VizAnalyzer.cpp  VizAnalyzer.hpp  VizCounter.hpp  VizEngine.cpp  VizHelper.cpp  VizHelper.hpp  VizLiteralHelper.hpp  VizStatisticsHelper.cpp  VizStatisticsHelper.hpp  VizSubgraphHelper.cpp  VizSubgraphHelper.hpp
viz/rules/: CMakeLists.txt  Grouping.hpp  OneDimensionMultiMeasures.cpp  OneDimensionMultiMeasures.hpp  OneDimensionOneMeasure.cpp  OneDimensionOneMeasure.hpp  SplitValue.cpp  SplitValue.hpp  TwoDimensionsOneMeasure.cpp  TwoDimensionsOneMeasure.hpp
(+36 files in other folders)
